--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ services:
 before_install:
     - docker build -t pparonson/docker-react -f Dockerfile.dev ./
 script:
-    - docker run -e CI=true USERNAME/docker-react npm run test
+    - docker run -e CI=true pparonson/docker-react npm run test
