--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ deploy:
     on:
         branch: master
     access_key_id: 
-        secure: "Encrypted $AWS_ACCESS_KEY"
+        secure: "Encrypted <access-key-id>=$AWS_ACCESS_KEY"
     secret_access_key: 
-        secure: "Encrypted $AWS_SECRET_KEY"
+        secure: "Encrypted $<secret-access-key>=AWS_SECRET_KEY"
